# jaffle-shop-classic

./: .gitignore  .pre-commit-config.yaml  .sourcery.yaml  .sqlfluff  .sqlfluffignore  .user.yml  CHANGELOG.md  Makefile  Pipfile  README.md  Untitled.ipynb  clustering.py  config.toml  conftest.py  coverage_report.py  dagster_cloud.yaml  dbt-refresh.sh  dbt_project.yml  dbttest.ipynb  docker-compose.yml  e2e-local.ipynb  e2e-snowpark.ipynb  enhance-for-kos-testing.sh  fal_project.yml  package-lock.yml  packages.yml  paradime_schedules.yml  pbt_project.yml  practice.txt  profiles.yml  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  rs_crossdb.md  rs_metadata.md  selectors.yml  test1  testnotebook.py  tutorial.duckdb  (+1 more)
.circleci/: config.yml
.dbtenv/: pyvenv.cfg
.github/: pull_request_template.md
.piperider/: config.yml
_deleteme_profiles/: profiles.yml
analyses/: explore.sql
bigquery/: dbt_project.yml
code_coverage/: __main__.py  badge.py  coverage.py  coverage.sql  dbt_model_parser.py  main.py
dalma/: dbt_project.yml  packages.yml  pbt_project.yml
data/: item.csv  item.csv:Zone.Identifier  people.csv  raw_customers.csv  raw_events.csv  seeds.yml
db-docker-setup/: Dockerfile  docker-compose.yml  setup-db.sh
dbt/: profiles.yml
docker/: README.md
github_actions_scripts/: check_primary_key.py
jaffle_dagster/: pyproject.toml  setup.py
jaffle_shop_classic/: pyproject.toml  setup.py
lookml/: customers.model.lkml  orders.model.lkml  stg_customers.model.lkml  stg_orders.model.lkml  stg_payments.model.lkml
models/: aov.sql  (+38 more)
(+351 files in other folders)
