[project]
name = "jaffle-shop"
version = "0.0.0"
description = "A self-contained dbt project for testing purposes (fork of the `dbt-labs/jaffle_shop` repo)."
requires-python = ">=3.9"
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
repository = "https://github.com/Bilbottom/jaffle-shop"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {file = ["requirements-dev.txt"]}


[tool.pytest.ini_options]
addopts = "--cov=code_coverage"
testpaths = [
    "tests",
]


[tool.isort]
profile = "black"
